tests/cases/compiler-development/artifact/errors/diagnostic-private-struct-type.diagnostic
diagnostic error code=M0001 family=module message="struct 'Hidden::Secret' is not public" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/modules/errors/private-module-struct-type.ari" display="tests/cases/modules/errors/private-module-struct-type.ari" bytes=130
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/private-module-struct-type.ari" line=8 column=9 end_line=8 end_column=15 byte_start=78 byte_end=84 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/private-module-struct-type.ari:8:9\n   |\n 8 |   item: Hidden::Secret,\n   |         ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/modules/errors/private-module-struct-type.ari" line=2 column=10 end_line=2 end_column=16 byte_start=22 byte_end=28 message="private struct 'Hidden::Secret' declared here"
  Snippet label=1 text="  --> tests/cases/modules/errors/private-module-struct-type.ari:2:10\n   |\n 2 |   struct Secret {\n   |          ^^^^^^"
  Note index=0 location=none message="module visibility is enforced at the use site and the private declaration is shown as a secondary label"
  Help index=0 location=none message="mark struct 'Hidden::Secret' as pub or access it from inside module 'Hidden'"
